[project]
name = "my-project"
version = "0.1.0"
description = "Generates input files for Splice to run behavioural experiments in Xmod"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.16.5",
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-semantic-release>=10.6.1",
    "ruff>=0.15.21",
]

[tool.pyrefly.errors]
redundant-cast = "warn"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers =[
    "unit",
    "integration",
    "slow"
    ]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py313"
output-format = "grouped"
respect-gitignore = true

show-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false #respect magic trailing commas
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    #"ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D103",
    "D102",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",   # one-line docstring should fit on one line
    "D205",   # missing blank line after summary
    "D212",   # multilline docstring summary start at first line
    "D400",   # first line should end with a period
    "D401",   # first line should start with imperative
    "D415",   # first line should end with punctuation
    "E402",   # false positives for local imports
    "E501",   # line too long
    "EM101",  #Exception must not use a string literal, assign to var first
    "EM102",  #Exception must not use an f-string literal, assign to var first
    "FBT001", #Boolean typed positional argument in func def
    "FBT002", #Boolean default positional argument in func dec
    "G004",   #F string in logging statement
    "TRY003", # external messages in exceptions are too verbose
    "TD002",  # missing todo author
    "TD003",  # missing todo issue link
    "FIX002", # too verbose descriptions of todos
    # disable these rules to use the ruff formatter.
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "E501",   # line-too-long
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "TC001",  # move application import into type-checking block
    "TC002",   #put imports needed only for type checking in type checking block
    "TC003",   #put standard library import in type checking block
    "PYI034",  #intended for .pyi stub file
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow underscore-prefixed unused variables
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
# https://github.com/google/styleguide/blob/gh-pages/pyguide.md#38-comments-and-docstrings

convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101",    # asserts allowed in tests...
    "S108",    # probably insecure usage of temporary file or directory
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "ANN",      # Ignore missing type annotations in tests
    "TC002",   #put imports needed only for type checking in type checking block
    "TC003",   #put standard library import in type checking block
]

[tool.ruff.lint.flake8-annotations]
# suppress ANN401 for *args and **kwargs
allow-star-arg-any = true

[tool.pyrefly]
project-includes = ["src"]
python-version = "3.13.0"
preset = "legacy"
